# CHARM

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt
application/dimmwitted/: CMakeLists.txt  Makefile  dw-lr-test  dw-lr-train  example  run_test
application/dimmwitted/examples/: example.cpp  logistic_regression_sparse_sgd.cpp
application/dimmwitted/src/: util.h
application/dimmwitted/src/engine/: scheduler_hogwild.h  scheduler_percore.h  scheduler_pernode.h
application/dimmwitted/test/: a6a.model  a6a.output  test_lr.sh
application/ermia-alpha1/: CMakeLists.txt
application/graph500/: CMakeLists.txt  bfs_local_adj.h  common.h  graph.h  main.cc  verify.h
application/gups/: CMakeLists.txt  main.cc
application/streamcluster/: Makefile  output.txt  res_chiplet_remoc_NUMA_cache_shoal_02.txt  res_chiplet_shoal.txt  res_chiplet_shoal_02.txt  res_chiplet_shoal_03.txt  res_jemalloc.txt  res_shoal.txt  res_shoal_02.txt  runbench.sh  streamcluster  streamcluster.cpp  streamcluster.patch
application/test/: CMakeLists.txt  main.cc
src/: CMakeLists.txt  charm.cc  charm.h
src/comm/: communicator.cc  communicator.h  completion.cc  completion.h  message.h  messagepool.cc  messagepool.h  mpienv.cc  mpienv.h  pool_allocator.cc  pool_allocator.h  verbs.cc  verbs.h
src/graph/: edgelist.cc  edgelist.h  graph.cc  graph.h
src/perf/: perf_counter.h  test  test.cpp
src/pgas/: addressing.h  allocator.cc  allocator.h  collective.h  future.h  garray.h  parallelfor.h  rpc.h  rpc_helper.h  rpc_with_data.h  vmemory.cc  vmemory.h
src/sched/: barrier.cc  (+8 more)
(+35 files in other folders)
